--- a/fpl-client/frontend/src/index.css
+++ b/fpl-client/frontend/src/index.css
@@ -33,3 +33,10 @@ code {
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("./assets/fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
